--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
 #canv {
   background-color: black;
 }
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 26px;
+}
+@media screen and (max-width: 990px){
+  #canv {
+    float: left;
+  }
+}
