adding input FEN

--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,16 @@
   background-color: #4CAF50;
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 10px 5px;
+  margin: 5px 5px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 26px;
+}
+.input {
+  margin: 5px 5px;
+	color: red;
 }
 @media screen and (max-width: 990px){
   #canv {
