--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,11 @@
   margin: 5px 5px;
 	color: red;
 }
+.tomove {
+	margin: 0;
+	color: red;
+	font-size: 1.2rem;
+}
 @media screen and (max-width: 990px){
   #canv {
     float: left;
